--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   printing: ^5.14.2
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
